<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>example</groupId>
  <artifactId>elasticsearch_tests</artifactId>
  <version>0.2.0-SNAPSHOT</version>
  <url>http://maven.apache.org</url>
  <properties>
    <encoding>UTF-8</encoding>
    <elasticsearch.version>7.6.2</elasticsearch.version>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
    <java.version>1.8</java.version>
    <junit.version>4.13.1</junit.version>
    <log4j.version>2.16.0</log4j.version>
    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>elasticsearch-rest-client</artifactId>
      <version>${elasticsearch.version}</version>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>elasticsearch-rest-high-level-client</artifactId>
      <version>${elasticsearch.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
          <!-- NOTE: some compiler optimizatino flags not recognized on JDK 1.8.0.101 and were added in later builds e.g. 1.8.0.151:  
                  Fatal error compiling: 
                  invalid flag: -XX:+AggressiveUnboxing
                  invalid flag: -XX:+AggressiveOpts
                  invalid flag: -XX:+UnlockExperimentalVMOptions
                  -->
          <!--
          <compilerArgument>-XX:+UnlockExperimentalVMOptions</compilerArgument>
          <compilerArgument>-XX:+AggressiveOpts</compilerArgument>
	  <compilerArgument>-XX:+AggressiveUnboxing</compilerArgument>
	  -->
          <!--
   <compilerArgument>-Dfile.encoding=${encoding}</compilerArgument>
Fatal error compiling: invalid flag: -Dfile.encoding=UTF-8 -> [Help 1]
-->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <encoding>${encoding}</encoding>
          <!--
          NOTE: specifying the suite XML file prevents surefile from scannint all tests casses and execute everything with the method name mask match
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/suites/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          -->
          <!-- For parallel runs with e.g. Vagrant https://github.com/sergueik/selenium-fluxbox
          <argLine>-Dfile.encoding=${encoding} -Dparallel=tests -DthreadCount=2 </argLine>
          -->
          <argLine>-Dfile.encoding=${encoding}</argLine>
          <!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>unit-tests</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>false</skip>
              <systemPropertyVariables>
                <webdriver.driver>${browser.name}</webdriver.driver>
                <selenium.version>${selenium.version}</selenium.version>
                <property.filepath>${property.filepath}</property.filepath>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${encoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <description>Indexing Test log data into Elastic Search</description>
</project>
